fix z-index for deploy success

--- a/containers/searchResult/listresult.module.scss
+++ b/containers/searchResult/listresult.module.scss
@@ -7,7 +7,7 @@
   top: 50px;
   width: 350px;
   background-color: white;
-  z-index: 1000000000000000000000000000000000000000000;
+  z-index: 1000;
   box-shadow: 0 0.3px 1.8px rgba(0, 0, 0, 0.13), 0 2px 14px rgba(0, 0, 0, 0.26);
   padding: 10px;
   padding-bottom: 0px;
